--- a/scss/default/_base.scss
+++ b/scss/default/_base.scss
@@ -94,14 +94,24 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
 
 // ~ Gray on glass
 
-@mixin style-main {
+@mixin style-main_transparent {
     // background: linear-gradient(to top, rgba(255, 255, 255, .15), rgba(255, 255, 255, .05));
     background-color: rgba(255, 255, 255, .1);
     border: 1px solid rgba(255, 255, 255, .15);
     box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
 }
 
-@mixin style-main_base_blur {
+@mixin style-main {
+    // background-color: rgba(255, 255, 255, .1);
+    // border: 1px solid rgba(255, 255, 255, .15);
+    // box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
+
+    background-color: rgb(68, 68, 68);
+    border: 1px solid rgb(96, 96, 96);
+    box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
+}
+
+@mixin style-main_base_transparent {
     background-color: rgba(50, 50, 50, 0.75);
     border: 1px solid rgba(255, 255, 255, .15);
     box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
@@ -110,16 +120,20 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
 }
 
 @mixin style-main_base {
-    background-color: rgba(50, 50, 50, 0.75);
-    border: 1px solid rgba(255, 255, 255, .15);
-    box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
-}
-
-@mixin style-main_base_47 {
     background-color: rgb(47, 47, 47);
     border: 1px solid rgb(78, 78, 78);
     box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
+
+    // background-color: rgba(50, 50, 50, 0.75);
+    // border: 1px solid rgba(255, 255, 255, .15);
+    // box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
 }
+
+// @mixin style-main_base_47 {
+//     background-color: rgb(47, 47, 47);
+//     border: 1px solid rgb(78, 78, 78);
+//     box-shadow: 0 5px 15px -2px rgba(0, 0, 0, .2);
+// }
 
 @mixin style-main_active {
     background-color: $clr-blue_light_transparent;
@@ -144,8 +158,21 @@ $shadow_light: inset -1px 0 0 0 rgba(255, 255, 255, .25);
     }
 }
 
+@mixin style-main_transparent_click {
+    @include style-main_transparent;
+    transition: .2s;
+    cursor: pointer;
+    
+    &:hover {
+        @include style-main_hover;
+    }
+    &:active {
+        transform: scale(.95)
+    }
+}
+
 @mixin style-main_mouse {
-    @include style-main;
+    @include style-main_transparent;
     transition: .2s;
     &:hover {
         @include style-main_hover;
