--- a/scss/elements/index/_carousel.scss
+++ b/scss/elements/index/_carousel.scss
@@ -25,7 +25,7 @@
             border-radius: 50%;
             transition: .15s;
             cursor: pointer;
-            @include base.style-main_click;
+            @include base.style-main_transparent_click;
             & > img {
                 width: 100%;
                 filter: invert(1);
@@ -43,7 +43,7 @@
                 cursor: default;
                 opacity: 0.5;
                 &:hover {
-                    @include base.style-main;
+                    @include base.style-main_transparent;
                 }
                 &:active {
                     transform: scale(1);
@@ -143,7 +143,7 @@
                     position: relative;
                     z-index: 3;
                     will-change: backdrop-filter;
-                    @include base.style-main;
+                    @include base.style-main_transparent;
                     &__buttons {
                         display: flex;
                         gap: 10px;
@@ -177,7 +177,7 @@
                             //     // background-color: base.$lightBlue;
                             //     // ! background: base.$mainGradient_100;
                             // }
-                            @include base.style-main_click;
+                            @include base.style-main_transparent_click;
                         }
                     }
                     &__priceTag {
@@ -212,7 +212,7 @@
                                 left: 15px;
                                 right: 15px;
                             }
-                            @include base.style-main;
+                            @include base.style-main_transparent;
                         }
                     }
                     &_dark {
