--- a/scss/elements/series/_series.scss
+++ b/scss/elements/series/_series.scss
@@ -31,7 +31,7 @@
             border-radius: 20px;
             transition: .4s;
             cursor: pointer;
-            @include base.style-main_base;
+            @include base.style-main_base_transparent;
             & > h3 {
                 font-size: 24px;
                 font-weight: 700;
@@ -75,7 +75,7 @@
                 -webkit-backdrop-filter: blur(10px);
                 backdrop-filter: blur(10px);
                 transition: .2s;
-                @include base.style-main_click;
+                @include base.style-main_transparent_click;
                 & > svg {
                     transition: .2s;
                     transform: rotate(270deg);
